--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,9 @@
     <string name="player_deletion_yes">Yes</string>
     <string name="player_deletion_no">No</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="game_title">GAME</string>
+    <string name="setting_ranking_title">RANKING</string>
+
 </resources>
